Fix z-index issue with react-select in production builds

--- a/client/themes/default/style.css
+++ b/client/themes/default/style.css
@@ -48,6 +48,19 @@ ul {
     margin: 0;
 }
 
+.Select {
+    z-index: 4;
+}
+
+.Select-menu-outer {
+    z-index: 5;
+}
+
+.Select-control,
+.Select-input {
+    height: 32px !important;
+}
+
 /* Wizard */
 .wizard {
     margin: auto;
